--- a/Teraoka/Controllers/NewOrderController/NewOrderController.xib
+++ b/Teraoka/Controllers/NewOrderController/NewOrderController.xib
@@ -247,7 +247,7 @@
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="QCf-Un-Ufk" secondAttribute="trailing" constant="100" id="3dc-nI-ZUU"/>
                 <constraint firstItem="XjE-qG-xXC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="72u-fN-i6M"/>
