--- a/Teraoka/Controllers/NewOrderController/NewOrderController.xib
+++ b/Teraoka/Controllers/NewOrderController/NewOrderController.xib
@@ -37,9 +37,9 @@
             <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XjE-qG-xXC">
+                <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XjE-qG-xXC">
                     <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCf-Un-Ufk">
                     <rect key="frame" x="100" y="100" width="1166" height="824"/>
