--- a/Teraoka/Controllers/SettingsController/SettingsController.xib
+++ b/Teraoka/Controllers/SettingsController/SettingsController.xib
@@ -23,14 +23,17 @@
             <connections>
                 <outlet property="dineinBtn" destination="yEf-AM-i1o" id="Kau-uY-rLF"/>
                 <outlet property="fixedBtn" destination="yPg-FP-Js1" id="lIc-bR-VT0"/>
+                <outlet property="heightRequestForAssistanceContainerView" destination="bSD-MK-fuM" id="zi0-aj-bef"/>
                 <outlet property="preOrderBtn" destination="E9R-ow-Oi7" id="S2X-FX-xho"/>
                 <outlet property="quickServeBtn" destination="Qy2-xH-uys" id="EqD-2O-8kz"/>
+                <outlet property="requestForAssistanceContainerView" destination="T6e-cf-cck" id="Z96-nd-IE7"/>
                 <outlet property="requestForAssistanceView" destination="X5X-ws-j7T" id="Gn7-cm-hHz"/>
                 <outlet property="requestForBillView" destination="hvh-cT-Qtc" id="Vsi-2L-wqp"/>
                 <outlet property="tfConfirmPassword" destination="nay-mZ-nuH" id="GVF-dZ-0VL"/>
                 <outlet property="tfIPAddress" destination="rpp-BX-EmB" id="dqM-b4-Ukd"/>
                 <outlet property="tfNewPassword" destination="LkY-Ka-PFK" id="8X9-Em-kCc"/>
                 <outlet property="tfTableNo" destination="4tL-nK-isu" id="mdf-qH-khY"/>
+                <outlet property="topPaddingRequestForAssistanceContainerView" destination="cZe-sg-24p" id="vg2-Nk-sw3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
